[package]
name = "oxidize"
description = "Awesome matchers/asserts"
version = "0.2.1"
license = "MPL-2.0"
documentation = "http://github.com/samfoo/oxidize"
homepage = "http://github.com/samfoo/oxidize"
repository = "http://github.com/samfoo/oxidize"
authors = ["Sam Gibson <sam@ifdown.net>"]

[dependencies]
regex = "0.1.41"

